--- a/app.html
+++ b/app.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <script src="jogo.js"></script>
     <title>Game Mata Mosquito</title>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
     
+    <script>
+        criaPosicaoRandomica();
+    </script>
 </body>
 </html>
