fazendo o mosquito aparecer e sumir de forma intervalada

--- a/app.html
+++ b/app.html
@@ -10,7 +10,10 @@
 <body onresize="ajustaTamanhoPalcoJogo()">
     
     <script>
-        criaPosicaoRandomica();
+        setInterval(function() {
+           criaPosicaoRandomica()
+        },1000);
+        
     </script>
 </body>
 </html>
