--- a/app.html
+++ b/app.html
@@ -8,12 +8,22 @@
     <title>Game Mata Mosquito</title>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
+
+    <!--Corrigir background-->
     
+    <div class="painel">
+        <div class="vidas">
+            <img src="imagens/coracao_vazio.png">
+            <img src="imagens/coracao_cheio.png">
+            <img src="imagens/coracao_cheio.png">
+        </div>
+        <div class="cronometro">Tempo Restante: ?</div>
+    </div>
+
     <script>
         setInterval(function() {
            criaPosicaoRandomica()
-        },1000);
-        
+        },1000); 
     </script>
 </body>
 </html>
